--- a/tools/async-trace-viewer/index.html
+++ b/tools/async-trace-viewer/index.html
@@ -2016,10 +2016,12 @@ const userB = await fetch('/user/123');</pre>
             dagCanvas.style.cursor = 'pointer';
             const r = hovered.resource;
             const tooltip = document.getElementById('tooltip');
+            const patternHTML = getPatternTooltipHTML(r.asyncId);
             tooltip.innerHTML = `
               <div class="tooltip-title">${r.type} #${r.asyncId}</div>
               <div>Trigger: #${r.triggerId || 'root'}</div>
               <div>Children: ${(traceData.childrenMap.get(r.asyncId) || []).length}</div>
+              ${patternHTML}
             `;
             tooltip.style.display = 'block';
             tooltip.style.left = (e.clientX + 10) + 'px';
@@ -2989,6 +2991,41 @@ const userB = await fetch('/user/123');</pre>
         default:
           return { color: '#cc66ff', glow: 10, lineWidth: 2, alpha: 0.7 };
       }
+    }
+
+    // Get all patterns that include a given resource
+    function getPatternsForResource(asyncId) {
+      if (!showPatterns || !detectedPatterns.length) return [];
+      return detectedPatterns.filter(p => p.resources.includes(asyncId));
+    }
+
+    // Generate HTML for pattern list in tooltips
+    function getPatternTooltipHTML(asyncId) {
+      const patterns = getPatternsForResource(asyncId);
+      if (patterns.length === 0) return '';
+
+      const severityColors = {
+        high: '#ff00ff',
+        medium: '#cc66ff',
+        low: '#9966cc'
+      };
+      const severityIcons = {
+        high: '🔴',
+        medium: '🟡',
+        low: '🟢'
+      };
+
+      const patternItems = patterns.map(p => {
+        const severity = p.severity || 'medium';
+        const color = severityColors[severity];
+        const icon = severityIcons[severity];
+        return `<div style="color: ${color}; font-size: 0.65rem;">${icon} ${p.type}: ${p.message.substring(0, 50)}${p.message.length > 50 ? '...' : ''}</div>`;
+      }).join('');
+
+      return `<div style="margin-top: 0.4rem; border-top: 1px solid #333; padding-top: 0.3rem;">
+        <div style="font-weight: bold; font-size: 0.7rem; color: #e94560;">Detected Patterns:</div>
+        ${patternItems}
+      </div>`;
     }
 
     // ==================== CLICK-TO-FILTER ====================
@@ -3966,11 +4003,13 @@ const userB = await fetch('/user/123');</pre>
              </div>`
           : '<div style="color: #666; font-size: 0.65rem; margin-top: 0.3rem;">No stack (internal)</div>';
         const classLabel = r._classification === 'typed' ? 'API' : (r._classification === 'user' ? 'User' : 'Internal');
+        const patternHTML = getPatternTooltipHTML(r.asyncId);
         tooltip.innerHTML = `
           <div class="tooltip-title">${r.type} #${r.asyncId} <span style="color: #888; font-size: 0.7rem;">(${classLabel})</span></div>
           <div>Created: ${(r.createdAt / 1e6).toFixed(2)}ms</div>
           ${r.callbackStartedAt > 0 ? `<div>Callback: ${(r.callbackStartedAt / 1e6).toFixed(2)}ms</div>` : ''}
           ${stackPreview}
+          ${patternHTML}
         `;
         tooltip.style.display = 'block';
         tooltip.style.left = (e.clientX + 10) + 'px';
