--- a/tools/async-trace-viewer/index.html
+++ b/tools/async-trace-viewer/index.html
@@ -1176,6 +1176,12 @@
             • <span style="opacity: 0.3;">Faded</span> = completed
           </div>
           <div class="detail-item" style="font-size: 0.7rem; line-height: 1.4; margin-top: 0.3rem;">
+            <strong>Badges:</strong><br>
+            • <span style="color: #ff6432;">Orange #</span> = ops waiting on this<br>
+            • 🔥 = critical path node<br>
+            • <span style="color: #9966cc;">Purple ?</span> = unresolved promise
+          </div>
+          <div class="detail-item" style="font-size: 0.7rem; line-height: 1.4; margin-top: 0.3rem;">
             <strong>Controls:</strong><br>
             • Play/Pause to control animation<br>
             • Click progress bar to seek<br>
